# kael-ml-lab

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  cleanup.sh  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  sin.py
cuda/: CMakeLists.txt
cuda/bindings/: bindings.cpp
cuda/include/: activations.cuh  attention.cuh  common.cuh  convolution.cuh  loss.cuh  matmul.cuh
cuda/src/activations/: activations.cu
cuda/src/attention/: attention.cu
cuda/src/convolution/: convolution.cu
cuda/src/loss/: loss.cu
cuda/src/matmul/: matmul.cu
cuda/tests/: test_activations.cu  test_matmul.cu
data/: README.md
docs/: README.md  cheatsheet.md
ml-books/: plan.txt
ml-books/stage5/: stage5.txt
notebooks/: README.md
notebooks/0_roadmap/: demo.ipynb  roadmap.md
notebooks/1_introduction/: 1.3_kinds-of-machine-learniing-problems.ipynb
notebooks/1_introduction/1.3_kinds-of-machine-learning-problems/: 1.3.2_unsupervised-and-selfsupervised-learning.ipynb  1.3.3_interacting-with-an-environment.ipynb
notebooks/2_preliminaries/2.1_data-manipulation/: 2.1.1_getting-started.ipynb  2.1.2_indexing-and-slicing.ipynb  2.1.3_operations.ipynb  2.1.4_broadcasting.ipynb  2.1.6_conversion-to-other-python-objects.ipynb  2.1.7_summary.ipynb  2.1_data-manipulation.ipynb
notebooks/2_preliminaries/2.2_data-preprocessing/: 2.2.1_reading-the-dataset.ipynb  2.2.2_data-preparation.ipynb  2.2.3_conversion-to-the-tensor-format.ipynb  2.2.4_discussion.ipynb  2.2_data-preprocessing.ipynb
notebooks/2_preliminaries/2.3_linear-algebra/: 2.3.1_scalars.ipynb  2.3.2_vectors.ipynb  2.3.4_tensors.ipynb  2.3.5_basic-properties-of-tensor-arithmetic.ipynb  2.3.6_reduction.ipynb  2.3.7_non-reduction-sum.ipynb  2.3.8_dot-products.ipynb  2.3.9_matrix-vector-products.ipynb
notebooks/abswp/1_python-basics/: yourfirstprogram.ipynb
notebooks/abswp/2_flow-control/: letstry.ipynb  practice.ipynb
notebooks/abswp/3-functions/: def.ipynb  practice.ipynb
notebooks/abswp/4-lists/: lists.ipynb  tuple.ipynb
notebooks/abswp/intro/: random.ipynb
notebooks/d2l/0_roadmap/: roadmap.md
notebooks/d2l/1_introduction/1.3_kinds-of-machine-learning-problems/: 1.3.1_supervised-learning.ipynb
notebooks/d2l/2_preliminaries/2.1_data-manipulation/: 2.1.1_getting-started.ipynb  2.1.5_saving-memory.ipynb  2.1.8_exercises.ipynb  data_manipulation.py
notebooks/d2l/2_preliminaries/2.2_data-preprocessing/: 2.2.5_exercises.ipynb  what.py
notebooks/d2l/2_preliminaries/2.3_linear-algebra/: 2.3.10_matrix-matrix-multiplication.ipynb  2.3.11_norms.ipynb  2.3.12_discussion.ipynb  2.3.13_exercises.ipynb  2.3.1_scalars.ipynb  2.3.3_matrices.ipynb  2.3_linear-algebra.ipynb
notebooks/d2l/2_preliminaries/2.3_linear-algebra/scripts/: matrices_product_optimization.py  matrices_product_optimization2.py  matrices_product_optimization3.py
notebooks/d2l/2_preliminaries/2.4_calculus/: 2.4.1_derivatives-and-differentiation.ipynb  2.4.2_visualization-utilities.ipynb  2.4.3_partial-derivatives-and-gradients.ipynb  2.4.4_chain-rule.ipynb  2.4.5_discussion.ipynb  2.4.6_exercises.ipynb  2.4_calculus.ipynb
notebooks/d2l/2_preliminaries/2.4_calculus/scripts/: derivatives2.py  derivatives_and_differentation.py  rules.py  visualization_utils.py
notebooks/d2l/2_preliminaries/2.5_automatic-differentiation/: 2.5.1_a-simple-function.ipynb  2.5.2_backward-for-non-scalar-variables.ipynb  2.5.3_detaching-computation.ipynb  2.5.4_gradients-and-python-control-flow.ipynb  2.5.6_exercises.ipynb  2.5_automatic-differentation.ipynb
notebooks/d2l/2_preliminaries/2.6_probability-and-statistics/: 2.6.1_a-simple-example-tossing-coins.ipynb
notebooks/d2l/2_preliminaries/2.7_documentation/: 2.7.1_functions-and-classes-in-a-module.ipynb
notebooks/d2l/3_linear-neural-networks-for-regression/3.1_linear-regression/: 3.1.1_basics.ipynb  3.1.2_vectorization-for-speed.ipynb  3.1.3_the-normal-distribution-and-squared-loss.ipynb
notebooks/d2l/3_linear-neural-networks-for-regression/3.2_object-oriented-design-for-implementation/: 3.2.1_utilities.ipynb  3.2.2_models.ipynb
notebooks/d2l/3_linear-neural-networks-for-regression/3.3_synthetic-regression-data/: 3.3.1_generating-the-dataset.ipynb  3.3.3_concise-implementation-of-the-data-loader.ipynb
scripts/: aliases.sh  build.sh  dev.sh  quick-start.sh  workflow-helper.sh
src/d2l_custom/: __init__.py
src/d2l_custom/cuda_ops/: __init__.py
src/d2l_custom/data/: __init__.py  loaders.py  synthetic.py
src/d2l_custom/models/: __init__.py  base.py  neural_networks.py
src/d2l_custom/training/: __init__.py  loop.py  trainer.py
src/d2l_custom/utils/: __init__.py  device.py  model_utils.py  timing.py
src/d2l_custom/visualization/: __init__.py
tests/: README.md  conftest.py  test_models.py  test_training.py  test_utils.py
